added basic self attention , masked sa , mhsa

--- a/RL/TF_Deep_RL.ipynb
+++ b/RL/TF_Deep_RL.ipynb
@@ -1,33 +1,32 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "04732749",
+   "cell_type": "markdown",
+   "id": "39ca49d9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def softmax(inputs : list)-> list:\n",
-    "    outputs = []\n",
-    "    return outputs\n"
+    "### Notes\n",
+    "\n",
+    "Keywords:\n",
+    "- Agent \n",
+    "- Environment\n",
+    "- Episodes : Environment is episodic if it ends and you can start a new episode\n",
+    "- Non episodic - stock market\n",
+    "               - online ads\n",
+    "               \n",
+    "- States\n",
+    "- Actions\n",
+    "- Rewards\n",
+    "- maximize the rewards\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a6f06f4",
+   "id": "e52b8553",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class Layer:\n",
-    "    def __init__(self , N_UNITS : int, inputs : list , output_shape : int ):\n",
-    "        self.N_UNITS = N_UNITS \n",
-    "        self.inputs = inputs  \n",
-    "        self.output_shape = output_shape \n",
-    "        self.input_shape = len()\n",
-    "    \n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
