--- a/vanilla/micrograd_from_scratch.ipynb
+++ b/vanilla/micrograd_from_scratch.ipynb
@@ -81,11 +81,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "78026ac2",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0000000000000009\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 2\n",
+    "b = 3\n",
+    "c = 1\n",
+    "d = a*b +c\n",
+    "e = a*b - c\n",
+    "h = 0.1\n",
+    "\n",
+    "f = ((c+h) - c)/h\n",
+    "\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b1fcd38",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Value:\n",
+    "    def __init__(self,)"
+   ]
   }
  ],
  "metadata": {
