--- a/vanilla/neural_networks_from_scratch.ipynb
+++ b/vanilla/neural_networks_from_scratch.ipynb
@@ -2577,8 +2577,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6da5bf3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [ 1.0 , - 2.0 , 3.0 ] # input values\n",
+    "w = [ - 3.0 , - 1.0 , 2.0 ] # weights\n",
+    "b = 1.0 # bias\n",
+    "\n",
+    "\n",
+    "# Multiplying inputs by weights\n",
+    "xw0 = x[ 0 ] * w[ 0 ]\n",
+    "xw1 = x[ 1 ] * w[ 1 ]\n",
+    "xw2 = x[ 2 ] * w[ 2 ]\n",
+    "# Adding weighted inputs and a bias\n",
+    "z = xw0 + xw1 + xw2 + b\n",
+    "\n",
+    "# ReLU activation function\n",
+    "y = max (z, 0 )\n",
+    "\n",
+    "\n",
+    "# Backward pass\n",
+    "# The derivative from the next layer\n",
+    "dvalue = 1.0\n",
+    "\n",
+    "\n",
+    "# Derivative of ReLU and the chain rule\n",
+    "drelu_dz = dvalue * ( 1. if z > 0 else 0. )\n",
+    "print (drelu_dz)\n",
+    "# Partial derivatives of the multiplication, the chain rule\n",
+    "dsum_dxw0 = 1\n",
+    "drelu_dxw0 = drelu_dz * dsum_dxw0\n",
+    "print (drelu_dxw0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "893c61d2",
    "metadata": {},
    "outputs": [],
    "source": []
